--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,31 @@
-h1, p {
-	color:white;
-	font-family:cursive;
-	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+p, h1{
+  	color:white !important;
+	font-family:cursive !important;
+	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black !important;
+}
+
+p button {
+  color: black;
+}
+
+p input {
+  color: black;
+  font-family: sans-serif;
+  margin: 0.25rem;
+}
+
+#status, #blanks {
+  color:white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+}
+
+#status {
+  font-size: larger;
+}
+
+#blanks {
+  font-size: xx-large;
+  margin: 1rem 0;
 }
 
 body {
